Bug 153096 - Manage Changes dialog columns broken for cell content changes
Summary: Manage Changes dialog columns broken for cell content changes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3 all versions
Hardware: All All
: medium major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.6.0 target:7.5.1 target:7.4.6
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2023-01-18 17:15 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2023-01-24 10:36 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2023-01-18 17:15:56 UTC
The track changes dialog is supposed to display
Action | Position | Author | Date | Comment
columns, but for cell content changes the entire string is stuffed into the Action column leaving other columns empty. That not only looks ugly but also defeats being able to sort on other columns.

Additionally, a "Row inserted" action label is replaced with "Changed contents" as soon as cell content is added in such inserted row (same for column), similar the "Row deleted" label if the row contained cell content (same for column) and again all string stuffed into the Action column, making the dialog utterly confusing. The actual actions are still visible in the generated Comment column, but..
Comment 1 Commit Notification 2023-01-18 20:37:58 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fc441f3886330c4ae2abeb67c0758b935ba23f47

Resolves: tdf#153096 Split change track content action into columns again

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2023-01-18 20:40:49 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/145724 for 7-5
https://gerrit.libreoffice.org/c/core/+/145725 for 7-4
Comment 3 Commit Notification 2023-01-19 08:19:57 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/7ad6682475df099643c344b5d1cfefef9189d932

Resolves: tdf#153096 Split change track content action into columns again

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-01-19 08:25:00 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/138c6f1d1371f89e379f1a58b38ef8a60d63077e

Resolves: tdf#153096 Split change track content action into columns again

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-19 14:43:08 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8e4740e7a93a03ca0faab40b163a1ec7da806a72

tdf#153096: sc: Add UItest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-01-24 10:36:26 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard