Resolves: tdf#153096 Split change track content action into columns again

Old SvTreeList did split a string on embedded \t Tab characters,
the new weld::TreeView does not but needs column text set
explicitly.

Regression from

    commit 56dd851cfc77c362c3db5c0aae4a490c7f6782cc
    CommitDate: Sat Apr 27 12:41:14 2019 +0200

        weld cluster of change tracking dialogs

that did the necessary changes for
ScAcceptChgDlg::AppendFilteredAction() but not for
ScAcceptChgDlg::AppendChangeAction() and
ScAcceptChgDlg::InsertChangeActionContent().

Odd that no one reported this in all the time..

Additionally, the "Changed contents" label being used instead of
"Row inserted"/"Column inserted"/"Row deleted"/"Column deleted" as
soon as cell content change is present depending on such action,
was a copypasta fallout from

    commit e7c76b30bd2ef802ce08f8739eac186253c79696
    CommitDate: Mon Aug 29 17:21:12 2011 -0400

        String to rtl::OUString.

Change-Id: I855c527da61723c104c743e3b3f159fb026917df
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145749
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit fc441f3886330c4ae2abeb67c0758b935ba23f47)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145724
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>